# rime

./: CHANGELOG.md  CLAUDE.md  COMPONENTS.md  Cargo.toml  ICED.md  README.md
.github/workflows/: ci.yml
demo/: Cargo.toml
demo/src/: main.rs  shot.rs
examples/: gallery.rs
rime/: Cargo.toml
rime/src/: icons.rs  lib.rs
rime/src/theme/: mod.rs  mod_tests.rs  palettes.rs  registry.rs  registry_tests.rs  style.rs
rime/src/widgets/: autocomplete.rs  banner.rs  bit_grid.rs  bit_grid_tests.rs  button.rs  card.rs  chart.rs  color_field.rs  context_menu.rs  dialog.rs  field.rs  grid.rs  grid_tests.rs  header.rs  menu.rs  menu_tests.rs  mod.rs  modal.rs  popover.rs  rename.rs  section.rs  secure_input.rs  secure_input_tests.rs  select.rs  settings.rs  shell.rs  shortcut.rs  slider.rs  stat.rs  status_bar.rs  stepper.rs  table.rs  table_tests.rs  tabs.rs  toggle.rs  tooltip.rs
src/: lib.rs
src/theme/: palettes.rs
src/widgets/: button.rs  input.rs  mod.rs  pill.rs  stat.rs
