[package]
name = "rime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
description = "A small, consistent component kit on top of iced."
repository = "https://github.com/nycjv321/rime"

[dependencies]
iced = { version = "0.13" }

[[example]]
name = "gallery"
path = "examples/gallery.rs"
