# Virtual workspace: the `rime` component kit and `rime-demo`, the showcase app
# that exercises every component (run with `cargo run -p rime-demo`).
[workspace]
resolver = "2"
members = ["rime", "demo"]

# iced is shared by the kit and the demo; pin it once so they never drift.
[workspace.dependencies]
iced = { version = "0.14", features = ["canvas", "advanced"] }
