[package]
name = "rime"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"
description = "A small, consistent component kit on top of iced."
repository = "https://github.com/alleato-llc/rime"

[dependencies]
iced = { workspace = true }
# `secure_input`'s secret buffer: mlock'd into RAM (best-effort) and wiped on
# drop. The same crates dorado's CLI uses for its own password handling.
region = "3"
zeroize = "1"
